[tool.poetry]
name = "poker-night-bot"
version = "0.1.0"
description = ""
authors = ["Uri Maimon <uri.maimon@medtronic.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python-telegram-bot = "^21.0.0"
pymongo = "^4.10.1"
treys = "^0.1.8"
ultralytics = "^8.3.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
